--- a/Appendices/Results.tex
+++ b/Appendices/Results.tex
@@ -27,7 +27,9 @@
 
 \noindent There are various approaches to rank the the likelihood of each model. Examples include rankings based on Bayesian Information Criterion (Schwarz), the Hannan-Quinn Information Criterion (HWIC), and the Akaike Information Criterion (AIC). We use the first approach because it has appealing consistency properties \citep{Diebold_2007_Forecasting}. This criterion minimizes the following loss function: $2 \log [\Pr( \text{Data} | m)]$. We follow an specific approximation developed by \citet{Claeskens-Hjort_2008_Model-Selection}, which assumes uniform priors and simplifies the computation of the loss function.\\
 
-\noindent This procedure allows us to choose one control set per outcomes of interest. To gain consistency across all specifications, we sum the BIC across all outcomes and choose the background variables with lower average across models. These background variables form our control set across all estimations and appear bold in Table~\ref{tab:pselectvars}.
+\noindent This procedure allows us to choose one control set per outcomes of interest. To gain consistency across all specifications, we sum the BIC across all outcomes and choose the background variables with lower average across models. These background variables form our control set across all estimations and appear bold in Table~\ref{tab:pselectvars}.\\ 
+
+\noindent We follow the samr procedure to elect the ``matching'' variables for the estimates of ``treatment vs. stay at home'' and ``treatment vs. alternative preschools parameters'' (see Section~\ref{section:methodsquestions}. We analyze sensitivity to the choice of these controls next.
 
 \subsubsection{Sensitivity Analysis}
 
@@ -130,9 +132,25 @@ Note: Panel (a) displays the distribution of the treatment effect estimate of th
 
 \noindent For both males and females, we find positive effects in IQ test scores, achievement test scores, as well as educational attainment. Males also enjoy additional benefits in the areas of employment, labor earnings, and hypertension. \\
 
-\noindent In each of the tables for combining functions and treatment effect estimates, we present 8 different estimates. Column (1) corresponds to the mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to. Column (2) adjusts the estimates in (1) for attrition and controls for a set of covariates. Column (3) corresponds to the mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, restricting the latter to subjects who did not receive preschool alternatives. Column (4) adjusts the estimates in (3) for attrition and controls for a set of covariates. Column (5) corresponds to the mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, placing a relatively high weight on the subjects who are likely not to be enrolled in alternative preschools. Column (6) corresponds to the mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, restricting the latter to subjects who received preschool alternatives. Column (7) adjusts the estimates in (6) for attrition and controls for a set of covariates. Column (8) corresponds to the mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, placing a relatively high weight on the children who are likely to be enrolled in alternative preschools. The results in bold are statistically significant at the 10\% level in a single-sided, non-parametric, bootstrapped test \footnote{For the tables that present categorical combining function statistics that count the number of positive treatment effects that are significant at the 10\% level, two bootstrap tests are conducted. The first bootstrap test is used to determine significance at the 10\% level for each treatment effect. The second bootstrap test is used to determine whether the combined function statistic is significantly different from 10\% at the  10\% level.}. Columns (5) and (8) are standard kernel matching estimates. \\
+\noindent In each of the tables for combining functions and treatment effect estimates, we present 8 different estimates. Column (1) corresponds to the mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to. Column (2) adjusts the estimates in (1) for attrition and controls for a set of covariates. Column (3) corresponds to the mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, restricting the latter to subjects who did not receive preschool alternatives. Column (4) adjusts the estimates in (3) for attrition and controls for a set of covariates. Column (5) corresponds to the mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, placing a relatively high weight on the subjects who are likely not to be enrolled in alternative preschools. Column (6) corresponds to the mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, restricting the latter to subjects who received preschool alternatives. Column (7) adjusts the estimates in (6) for attrition and controls for a set of covariates. Column (8) corresponds to the mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, placing a relatively high weight on the children who are likely to be enrolled in alternative preschools. The results in bold are statistically significant at the 10\% level in a single-sided, non-parametric, bootstrapped test.\footnote{For the tables that present categorical combining function statistics that count the number of positive treatment effects that are significant at the 10\% level, two bootstrap tests are conducted. The first bootstrap test is used to determine significance at the 10\% level for each treatment effect. The second bootstrap test is used to determine whether the combined function statistic is significantly different from 10\% at the  10\% level. See Appendix~\ref{appendix:bootstrap} for more details on our inference procedures.} Columns (5) and (8) are standard kernel matching estimates. \\
 
-\noindent Beginning with Table~\ref{table:abccare_rslt_pooled_cat0}, we display treatment effects by outcome. We divide the tables by different blocks of related outcomes. In each table we also present one or two factors constructed with the methodology in Section~\ref{section:accendog}. The idea behind doing this is to recover a ``latent'' outcome summarizing the outcomes in the table (e.g., latent IQ across IQ from ages 2 to 5). That is, measure the latent outcome using outcomes at various ages as measures of this latent. Testing for treatment effects on this factor it is yet another alternative to summarize treatment effects across a block of outcomes.
+\noindent Beginning with Table~\ref{table:abccare_rslt_pooled_cat0}, we display treatment effects by outcome. We divide the tables by different blocks of related outcomes. In each table we also present one or two factors constructed with the methodology in Appendix~\ref{app:endogeneity}. The idea behind doing this is to recover a ``latent'' outcome summarizing the outcomes in the table (e.g., latent IQ across IQ from ages 2 to 5). That is, measure the latent outcome using outcomes at various ages as measures of this latent. Testing for treatment effects on this factor it is yet another alternative to summarize treatment effects across a block of outcomes. Table~\ref{table:treatfactors} summarizes treatment effects on the set of selected``latent'' outcomes that we estimate. We display the full set of estimates beginning with Table~\ref{table:abccare_rslt_pooled_cat0}, together with the corresponding outcomes underlying the latents that we estimate.
+
+\begin{table}[H]
+\centering
+\begin{threeparttable}
+\caption{Treatment Effects on Selected Latent Outcomes}\label{table:treatfactors}
+\begin{scriptsize}
+\input{output/select_rslt_factors.tex}
+\end{scriptsize}
+\begin{tablenotes}
+\tiny
+Note: This table shows the treatment effects for ``latent'' outcomes, constructed from various related outcomes to the latent. We use the method in Appendix~\ref{app:endogeneity} to estimate this latent. Each column present estimates for the following parameters: \textbf{(1)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | W = 1]$; {\textbf{(2)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B} \big]$}; {\textbf{(3)} $\mathbb{E} \big[ \bm{Y}^1 | \bm{B}, D=1 \big] - \mathbb{E} \big[ \bm{Y}^0 | \bm{B}, V=0, D=0 \big]$}; {\textbf{(4)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B}, V=0 \big] $}; {\textbf{(5)} $\mathbb{E} \big[ \bm{Y}^1 | \bm{B}, D=1 \big] - \mathbb{E} \big[ \bm{Y}^0 | \bm{B}, V=1, D = 0 \big]$}; {\textbf{(6)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B}, V=1 \big]$}. We account for the following background variables ($\bm{B}$): Apgar scores at minutes 1 and 5 and the high-risk index. We define the high-risk index in Appendix~\ref{appendix:background} and explain how we choose the control variables in Appendix~\ref{appendix:bvariables}. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We highlight point estimates significant at the $10\%$ level.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+\doublespacing
+
 
 \input{AppResOutput/1_abccare_appendix}
 \doublespacing
