--- a/abc_comprehensivecba_gmm.tex
+++ b/abc_comprehensivecba_gmm.tex
@@ -77,7 +77,7 @@ Y^d_{k,j,a} = \phi^d_{k,j,a} (\bm{X}^d_{k,a}, \bm{B}_k) + \varepsilon^d_{k,j,a},
 \begin{equation}
 \mathbb{E}
 \begin{bmatrix}
-\bm{m} \left( \bm{X}_{n,a^*+1}^d, \bm{B}_{n}; \bm{\theta}_{j,a^*+1} \right) \\ \bm{m} \left( \bm{X}_{n,a^*2}^d, \bm{B}_{n}; \bm{\theta}_{j,a^*+2} \right) 
+\bm{m} \left( \bm{X}_{n,a^*+1}^d, \bm{B}_{n}; \bm{\theta}_{j,a^*+1} \right) \\ \bm{m} \left( \bm{X}_{n,a^*+2}^d, \bm{B}_{n}; \bm{\theta}_{j,a^*+2} \right) 
 \end{bmatrix}
 = \bm{0}
 \end{equation}\\
@@ -87,10 +87,10 @@ Y^d_{k,j,a} = \phi^d_{k,j,a} (\bm{X}^d_{k,a}, \bm{B}_k) + \varepsilon^d_{k,j,a},
 \begin{equation}
 q : = 
 {\begin{bmatrix}
-\bm{m}_{j,a^*+1} \left( \bm{X}_{n,a^*+1}^d, \bm{B}_{n}; \bm{\theta}_{j,a^*1} \right) \\ \bm{m}_{j,a^*+2} \left( \bm{X}_{n,a^*2}^d, \bm{B}_{n}; \bm{\theta}_{j,a^*+2} \right) 
+\bm{m}_{j,a^*+1} \left( \bm{X}_{n,a^*+1}^d, \bm{B}_{n}; \bm{\theta}_{j,a^*+1} \right) \\ \bm{m}_{j,a^*+2} \left( \bm{X}_{n,a^*+2}^d, \bm{B}_{n}; \bm{\theta}_{j,a^*+2} \right) 
 \end{bmatrix}}^{'}
 \begin{bmatrix}
-\bm{m}_{j,a^*+1} \left( \bm{X}_{n,a^*+1}^d, \bm{B}_{n}; \bm{\theta}_{j,a^*1} \right) \\ \bm{m}_{j,a^*+2} \left( \bm{X}_{n,a^*2}^d, \bm{B}_{n}; \bm{\theta}_{j,a^*+2} \right) 
+\bm{m}_{j,a^*+1} \left( \bm{X}_{n,a^*+1}^d, \bm{B}_{n}; \bm{\theta}_{j,a^*+1} \right) \\ \bm{m}_{j,a^*+2} \left( \bm{X}_{n,a^*+2}^d, \bm{B}_{n}; \bm{\theta}_{j,a^*+2} \right) 
 \end{bmatrix}. 
 \end{equation}\\
 
