--- a/output/auto_nlsy.tex
+++ b/output/auto_nlsy.tex
@@ -1,18 +1,20 @@
 \begin{tabular}{lccc} \hline
  & (1) & (2) & (3) \\
- & lag0nlsy & lag1nlsy & lag2nlsy \\
-VARIABLES & inc\_labor & inc\_labor & inc\_labor \\ \hline
+ & model1 & model2 & model3 \\
+VARIABLES & inc\_labor & inc\_labor & dinc\_labor \\ \hline
  &  &  &  \\
-linc\_labor & 1.074*** & 1.074*** & 1.074*** \\
- & (0.004) & (0.005) & (0.006) \\
-male & -370.858*** & -370.858*** & -370.858*** \\
- & (76.066) & (92.094) & (99.714) \\
-years\_30y & -181.320*** & -181.320*** & -181.320*** \\
- & (26.596) & (33.433) & (37.423) \\
-Constant & 1,429.612*** & 1,429.612*** & 1,429.612*** \\
- & (311.144) & (385.565) & (425.092) \\
+linc\_labor & 1.056*** & 1.058*** &  \\
+ & (0.004) & (0.004) &  \\
+male &  & -326.840*** &  \\
+ &  & (75.057) &  \\
+years\_30y &  & -114.964*** &  \\
+ &  & (27.062) &  \\
+ldinc\_labor &  &  & 0.503*** \\
+ &  &  & (0.030) \\
+Constant & -733.328*** & 874.394*** &  \\
+ & (89.734) & (306.410) &  \\
  &  &  &  \\
- Observations & 70,224 & 70,224 & 70,224 \\ \hline
+ Observations & 70,015 & 70,015 & 67,189 \\ \hline
 \multicolumn{4}{c}{ Robust standard errors in parentheses} \\
 \multicolumn{4}{c}{ *** p$<$0.01, ** p$<$0.05, * p$<$0.10} \\
 \end{tabular}
