new gmm write-up

--- a/output/auto_nlsy.tex
+++ b/output/auto_nlsy.tex
@@ -1,20 +1,15 @@
-\begin{tabular}{lccc} \hline
+\begin{tabular}{lccc} \toprule
  & (1) & (2) & (3) \\
- & model1 & model2 & model3 \\
-VARIABLES & inc\_labor & inc\_labor & dinc\_labor \\ \hline
- &  &  &  \\
-linc\_labor & 1.056*** & 1.058*** &  \\
+&  Labor Income  &  Labor Income  & $\Delta$Labor Income  \\ \midrule
+Lagged Labor Income & 1.056*** & 1.058*** &  \\
  & (0.004) & (0.004) &  \\
-male &  & -326.840*** &  \\
+Male  &  & -326.840*** &  \\
  &  & (75.057) &  \\
-years\_30y &  & -114.964*** &  \\
+Years of Education &  & -114.964*** &  \\
  &  & (27.062) &  \\
-ldinc\_labor &  &  & 0.503*** \\
+Lagged $\Delta$Labor Income &  &  & 0.503*** \\
  &  &  & (0.030) \\
 Constant & -733.328*** & 874.394*** &  \\
- & (89.734) & (306.410) &  \\
- &  &  &  \\
- Observations & 70,015 & 70,015 & 67,189 \\ \hline
-\multicolumn{4}{c}{ Robust standard errors in parentheses} \\
-\multicolumn{4}{c}{ *** p$<$0.01, ** p$<$0.05, * p$<$0.10} \\
+ & (89.734) & (306.410) &  \\ \\ \midrule
+ Observations & 70,015 & 70,015 & 67,189 \\ \bottomrule 
 \end{tabular}
