--- a/abc_comprehensivecba_gmm.tex
+++ b/abc_comprehensivecba_gmm.tex
@@ -16,15 +16,18 @@
 \newcommand{\notindep}{\notorth}
 
 \externaldocument{abc_comprehensivecba}
-\externaldocument{abc_comprehensivecba_appendix}
+\externaldocument{abc_comprehensivecba_appendix-pub}
 \pagenumbering{roman}
 
 \begin{document}
 
 
-\doublespacing
+\doublespacing 
 
-\subsection{Data Combination Estimator in the GMM Framework} \label{appendix:gmm}
+\noindent \textbf{[JLG: This is the updated estimation procedure and framing in GMM. It's based on our discussion of this afternoon.]} \\ 
+\noindent \textbf{[JLG: Next steps are (i) estimate the model using 21 and 30, to have a comparison; (ii) matching. I'm hoping to get this before the week ends.]} 
+
+\subsection{Estimation Procedure and Data Combination Estimator in the GMM Framework} \label{appendix:gmm}
 
 \noindent Our analysis is based on a causal model for treatment ($d=1$) and control ($d=0$) outcomes for measure $j$ at age $a$ in sample $k \in \{e,n\}$ where $e$ denotes membership in the experimental sample and $n$ denotes membership in the auxiliary sample:\\
 
@@ -32,151 +35,88 @@
 Y^d_{k,j,a} = \phi^d_{k,j,a} (\bm{X}^d_{k,a}, \bm{B}_k) + \varepsilon^d_{k,j,a}, \quad k \in \{n,e\}, \quad j \in \mathcal{J}_a, \quad d \in \{0, 1\}. 
 \end{equation}
 
-\noindent $\phi^d_{k,j,a}\left( \cdot, \cdot \right)$ is an invariant structural production relationship mapping inputs $\bm{X}^d_{k,a}, \bm{B}_k$ into output $Y^d_{k,j,a}$ holding error term $\varepsilon^d_{k,j,a}$ fixed.\\
+\noindent $\phi^d_{k,j,a}\left( \cdot, \cdot \right)$ is an invariant structural production relationship mapping inputs $\bm{X}^d_{k,a}, \bm{B}_k$ into output $Y^d_{k,j,a}$ holding error term $\varepsilon^d_{k,j,a}$ fixed. We let Assumption ~\ref{ass:exog} (Exogeneity) hold. That is, once we condition on $\bm{X}^d_{k,a}, \bm{B}_k$, $ \varepsilon^d_{k,j,a}$ is not serially correlated.\\
 
-\noindent Note that Assumption ~\ref{ass:exog} (Exogeneity) implies no serial correlation in $ \varepsilon^d_{k,j,a}$.\\
+\noindent In this section, we explain: (i) the procedure that we follow to form out-of-sample predictions; and (ii) formulate the estimation procedure in the generalized method of moments (GMM) framework.\\
 
-\noindent \textbf{[JJH: Not if we transform the estimates. Did you estimate with random walk component? This does not require absence of serial correlation?] [JLG: Sending a separate document discussing these estimates.]}\\
+\noindent In the auxiliary sample, we observe the outcome $Y_{n,j,a}$ for $a \in [a^*, \ldots, A]$. In the experimental sample, we observe the outcome $Y_{e,j,a}$ at most at two ages, depending on the outcome. For the time being, suppose that we observe the outcome at one age. We come back to this below.\\
 
+\noindent Before explaining the estimation procedure, note that Assumption~\ref{ass:summary} (Invariance) implies that $\phi_{k,j,a}^d \left (\cdot, \cdot \right) = \phi_{k,j,a}  \left (\cdot, \cdot \right) = \phi_{j,a}  \left (\cdot, \cdot \right)$. That is, invariance holds across the treatment and the control groups and invariance holds across the experimental and the auxiliary samples. It is important to note that invariance across the treatment and the control groups implies that the variables $\bm{X}_{k,a}^d$ summarize the effect of the treatment on the outcome. Given this and Assumption ~\ref{ass:exog} (Exogeneity), the distribution of $\varepsilon_{k,j,a}^d$ is the same across the treatment and the control groups. We then drop the superindex in $\varepsilon_{k,j,a}^d$.\\ 
 
-\noindent We show in the main text that $\phi^d_{n,j,a} (\cdot, \cdot)$ is an unbiased predictor of $Y_{e,j,a}^d$. This holds for any age, although we are specifically interested in $a > a^*$, given that we do not observe $Y_{e,j,a}^d$ after $a^*$.\\
+\noindent We test invariance across the treatment and the control groups and invariance across the experimental and the auxiliary samples  in Appendix~\ref{app:invariance}.\\
 
-\noindent We frame the estimation of $\phi^d_{n,j,a} (\cdot, \cdot)$ in the generalized method of moments (GMM) framework. This helps us illustrate how our prediction theory in the main text provides theoretical conditions for the combination of multiple datasets.\\
+\noindent In Appendix~\ref{app:containsupport}, we also document that the support of $Y_{n,j,a}^d, \bm{X}_{n,a}^d, \bm{B}_{n}$ covers the support of $Y_{e,j,a}^d, \bm{X}_{e,a}, \bm{B}_{e}$ for $d \in \{0, 1\}$. So we drop the $d$ superindex in $Y_{n,j,a}^d, \bm{X}_{n,a}^d$ given that we estimate an invariant model. We write: 
 
-\noindent First, note that Assumption ~\ref{ass:exog} (Exogeneity) implies the following holds in the \textit{experimental sample}: 
-
-\begin{eqnarray}
-\mathbb{E} \left[ Y_{e,j,a}^d | \bm{X}_{e,a}^d, \bm{B}_{e} \right] =  \phi^d_{e,j,a}\left( \bm{X}_{e,a}^d, \bm{B}_{e} \right). \label{eq:main}
-\end{eqnarray}
-
-\noindent By Assumption~\ref{ass:contain} (Support Conditions), the support of the auxiliary sample contains the support of the experimental sample. Thus, Equation~\eqref{eq:main} is valid for any $\bm{X}^d_{k,a}$, $\bm{B}_{k}$, and $\bm{Y}_{k,a}$, with $k \in \{ e, n\}$. We then can write: 
-
-\begin{eqnarray}
-\mathbb{E} \left[ Y_{n,j,a}^d | \bm{X}_{n,a}^d, \bm{B}_{n} \right] =  \phi^d_{e,j,a}\left( \bm{X}_{n,a}^d, \bm{B}_{n} \right).
-\end{eqnarray}
-
-\noindent This relates the moment $\mathbb{E} \left[ Y_{n,j,a}^d | \bm{X}_{n,a}^d, \bm{B}_{n} \right]$ in the auxiliary sample to the function  $\phi^d_{e,j,a}\left( \cdot, \cdot \right)$ in the experimental sample.\\
-
-\noindent By Assumption~\ref{ass:summary} (Invariance), we can write this as: 
-
-\begin{eqnarray}\label{eq:momentlink}
-\mathbb{E} \left[ Y_{n,j,a}^d | \bm{X}_{n,a}^d, \bm{B}_{n} \right] &=&  \phi^d_{e,j,a}\left( \bm{X}_{n,a}^d, \bm{B}_{n} \right) \nonumber \\ 
- &=&  \phi^d_{n,j,a}\left( \bm{X}_{n,a}^d, \bm{B}_{n} \right) \nonumber \\
- &=&  \phi_{j,a}\left( \bm{X}_{n,a}^d, \bm{B}_{n} \right). \label{eq:mainpred}
-\end{eqnarray}
-
-\noindent Equation~\eqref{eq:momentlink} directly states the relationship between the moment observed in the auxiliary sample, the left-hand side, and the function that we use to construct the predictions. Our objective is to estimate the parameters, $\bm{\theta}_{j,a}$, characterizing this function.\\ 
-
-\noindent The key moment condition implied by Assumption~\ref{ass:exog} (Exogeneity) is 
-
-\begin{equation}
-\mathbb{E} \left[ \bm{m}_{j,a} \left( \bm{X}_{n,a}^d, \bm{B}_{n}; \bm{\theta}_{j,a} \right) \right] = 0, \label{eq:moment}
+\begin{equation}\label{eq:routcome}
+Y_{k,j,a} = \phi_{j,a} (\bm{X}_{k,a}, \bm{B}_k) + \varepsilon_{k,j,a}, \quad k \in \{n,e\}, \quad j \in \mathcal{J}_a. 
 \end{equation}
 
-\noindent where $\bm{m}_{j,a} \left( \bm{X}_{n,a}^d, \bm{B}_{n} ; \bm{\theta}_{j,a} \right) := {\bm{X_{n,a}^d}}^{'} \left( Y_{n,j,a}^d -   \phi^d_{j,a} \left( \bm{X}_{n,a}^d, \bm{B}_{n} \right) \right)$ for $a \in [0, \ldots A]$.\\
-
-\noindent This allows us to discuss our data combination estimator as a generalized method of moments estimator.\\
-
-\noindent First, suppose that we are interested in estimating $\phi_{j,a} \left( \cdot \right)$ for a single outcome $j \in \mathcal{J}_{a}$ (e.g. labor income), but across all ages of interest. For the time being, assume that we do not place specific weights on the different moments implied by \eqref{eq:moment} (we come back to this issue below) and that there are two age periods after age $a^*$. In our auxiliary sample, the following moments identify $\bm{\theta}_{j,a^*+1}, \bm{\theta}_{j,a^*+2}$: 
-
-\begin{equation}
-\mathbb{E}
-\begin{bmatrix}
-\bm{m}_{j,a^*+1} \left( \bm{X}_{n,a^*+1}^d, \bm{B}_{n}; \bm{\theta}_{j,a^*+1} \right) \\ \bm{m}_{j,a^*+2} \left( \bm{X}_{n,a^*+2}^d, \bm{B}_{n}; \bm{\theta}_{j,a^*+2} \right) 
-\end{bmatrix}
-= \bm{0} \label{eq:smoment}
-\end{equation}\\
-
-\noindent An estimation approach leading to consistent estimates is to minimize
-
-\begin{equation}
-q : = 
-{\begin{bmatrix}
-\bm{\bar{m}}_{j,a^*+1} \left( \bm{X}_{n,a^*+1}^d, \bm{B}_{n}; \bm{\theta}_{j,a^*+1} \right) \\ \bm{\bar{m}}_{j,a^*+2} \left( \bm{X}_{n,a^*+2}^d, \bm{B}_{n}; \bm{\theta}_{j,a^*+2} \right) 
-\end{bmatrix}}^{'}
-\begin{bmatrix}
-\bm{\bar{m}}_{j,a^*+1} \left( \bm{X}_{n,a^*+1}^d, \bm{B}_{n}; \bm{\theta}_{j,a^*+1} \right) \\ \bm{\bar{m}}_{j,a^*+2} \left( \bm{X}_{n,a^*+2}^d, \bm{B}_{n}; \bm{\theta}_{j,a^*+2} \right) 
-\end{bmatrix}, 
-\end{equation}\\
-
-\noindent where $\bar{u}$ denotes the empirical counterpart of $u$.\\
-
-\noindent \textbf{[JJH: stack across all ages.] [JLG: This is coming after.]}\\
-
-
-\noindent \textbf{[JJH: we are trying to predict in $n$ sample] [JJH: How do we initialize the $n$? We are using $n$ to predict.] [JLG: Correct. See 1. below. There, I state how do we initialize in the auxiliary sample. The auxiliary sample always contains the outcomes observed at $a^*$. The footnote states what happens when we do not.]}\\
-
-\noindent \textbf{[JJH: let's cut the chase ---you never say how you forecast $n$.] [JLG: The answer to the previous question should get to this.]}\\
-
-\noindent \textbf{[JJH: How do we join the $e$ sample with the $n$ sample.] [JLG: The two samples meet in the joint moment condition in \eqref{eq:MOMENT}. A few steps come before.]}\\
-
-\noindent Two important questions are:
+\noindent First, we explain our estimation and prediction procedure. It is as follows:
 
 \begin{enumerate}
-\item The moment in \eqref{eq:smoment} is satisfied in the auxiliary sample, \textbf{how do we \textit{initialize} the computation of their empirical counterparts in the auxiliary sample?} \\ 
-\noindent In the auxiliary sample, there are two cases.\\
+\item Use the auxiliary sample ($n$) to estimate the the coefficients characterizing $\phi_{j,a} \left( \cdot , \cdot \right)$.\footnote{In practice, we use a weighted version of the auxiliary samples. The weights give relatively high importance to the individuals in the auxiliary sample whose characteristics $\bm{B}_k$ are close to the those of the individuals in the experimental sample. See Appendix~\ref{appendix:match}.}
 
-\begin{enumerate}
-\item We observe $Y_{n,j,a}$ at $a = a^*$. We are able to evaluate the empirical counterpart of $\bm{\bar{m}}_{j,a^*+1} \left( \bm{X}_{n,a^*+1}^d, \bm{B}_{n} \right) $, when $ \bm{X}_{n,a^*+1}^d$ contains a lagged value of $Y_{n,j,a}$ at $a^*+1$. The same is true for $a^*+1 < a < A$. Thus, we do not need to use predictions of $Y_{n,j,a}$ in the auxiliary sample. We evaluate $\bm{\bar{m}}_{j,a} \left( \bm{X}_{n,a}^d, \bm{B}_{n} \right)$ at  the realization of $\bm{X}_{n,a}^d$, when forming the empirical moments.\\
-
-\noindent This is the case for all of the outcomes, except for health.\\
-
-\item We do not observe $Y_{n,j,a}$ at $a = a^*$. This happens for some health outcomes. At $a^*$, we do not observe health outcomes as cancer or heart disease. We observe biomarkers.  We use these biomarkers to predict the health outcomes at $a^*$. Once a prediction is available, we can take a step analogous to step $2.$ below to compute the empirical counterpart of $\bm{\bar{m}}_{j,a} \left( \bm{X}_{n,a}^d, \bm{B}_{n} \right)$. We form a prediction of the health outcome at $a^*$ and then we go forward as in (a), replacing the observed outcome at $a = a^*$ with the prediction.\\
-
-\noindent The prediction of the health outcomes at age $a^*$, is based on probabilistic models that are identified through standard moment conditions (see Appendix F). For further reference, we define this additional set of moments as: 
+We denote these coefficients by $\bm{\theta}_{j,a}$ and the estimate of this function as $\hat{\phi}_{j,a} \left( \cdot , \cdot \right)$. At each age, we are able to compute the residuals of this estimation as follows: 
 
 \begin{equation}
-\mathbb{E} \left[ \mathbf{h} \left(  \bm{X}_{n,a^*}^d, \bm{B}_{n}; \bm{\theta}_{h}  \right) \right] = \mathbf{0}.
+Y_{n,j,a} -  \hat{\phi}_{j,a} (\bm{X}_{k,a}, \bm{B}_k) : = \hat{\varepsilon}_{n,j,a}. 
 \end{equation}
+
+For outcome $j$, we form the vector of residuals $\hat{\bm{\varepsilon}}_{n,j} : = \left[ \hat{\varepsilon_{n,j,a^*+1}}, \ldots, \hat{\varepsilon_{n,j,A}} \right]$.
+
+\item At age $a^*+1$, we construct the predicted outcome in the experimental sample (e) as follows:
+
+\begin{equation}
+\hat{Y}_{e,j,a^*+1} = \hat{\phi}_{j,a^*+1} \left( \bm{X}_{e,a^*+1}, \bm{B}_e \right).
+\end{equation}
+
+\noindent We are able to evaluate $\hat{\phi}_{j,a^*+1}$ at $ \bm{X}_{e,a^*+1}, \bm{B}_e $ even when $\bm{X}_{e,a^*+1}$ contains a one-period lag of $Y_{e,j,a^*+1}$ because we observe $Y_{e,j,a^*}$. This prediction does not account for error. We discuss prediction error below.
+
+\item At age $a^*+2$, we construct the predicted outcome in the experimental sample (e) as follows: 
+
+\begin{equation}
+\hat{Y}_{e,j,a^*+2} = \hat{\phi}_{j,a^*+1} \left( \bm{X}_{e,a^*+1}, \bm{B}_e \right).
+\end{equation}
+
+\noindent We are able to evaluate $\hat{\phi}_{j,a^*+2}$ at $ \bm{X}_{e,a^*+2}, \bm{B}_e $ even when $\bm{X}_{e,a^*+2}$ contains a one-period lag of $Y_{e,j,a^*+2}$ because we observe have a prediction of $Y_{e,j,a^*+1}$ from the step before (we evaluate at the prediction).
+
+\item We iterate this procedure up to age $A$. For outcome $j$, we form the vector of predictions $\hat{\bm{Y}}_{e,j} : = \left[ \hat{Y}_{e,j,a^*+1}, \ldots,  \hat{Y}_{e,j,A} \right]$.
+
+\item Under Assumption~\ref{ass:summary} (Invariance), $\hat{\bm{\varepsilon}}_{n,j}$ is a consistent estimate of $\hat{\bm{\varepsilon}}_{e,j}$. Thus, we form a prediction that accounts for prediction error as follows: 
+
+\begin{equation}
+\tilde{\bm{Y}}_{e,j} = \hat{\bm{Y}}_{e,j} + \hat{\bm{\varepsilon}}_{n,j}. 
+\end{equation}
+
+\noindent In practice, we randomly sample a vector of residuals from an individual $j$ in the auxiliary sample ($n$) and pair it with the vector $\hat{\bm{Y}}_{e,j}$ of individual $i$ in the experimental sample ($e$) to form the prediction $\tilde{\bm{Y}}_{e,j}$ for individual $i$ in the experimental sample. Random sampling is valid of invariance and exogeneity, i.e. under this assumption the vector of residuals from any individual $j$ in the auxiliary sample is a valid estimate for the vector of residuals of any individual $i$ in the experimental sample. 
 \end{enumerate}
 
-\item \textbf{How do we use the estimates of $\bm{\theta}_{j,a^*+1}, \bm{\theta}_{j,a^*+2}$ to construct the predictions in the experimental sample?}\\ 
-\noindent Based on the estimates of $\bm{\theta}_{j,a^*+1}, \bm{\theta}_{j,a^*+2}$, we can recover estimates of the functions that we use to predict: $\hat{\phi}_{j,a^*+1}, \hat{\phi}_{j,a^*+2}$. We use these functions in the experimental sample to construct the predictions of interest: $\hat{Y}_{e,j,a^*+1}$ and $\hat{Y}_{e,j,a^*+2}$. In a two-period setting, we would do the following: 
+\noindent Second, we formulate our estimation in the GMM framework. To this end, note that Assumption ~\ref{ass:exog} (Exogeneity) and Assumption~\ref{ass:summary} (Invariance) imply the following moment condition: 
 
-\begin{enumerate}
-\item Evaluate $\hat{\phi}_{j,a^*+1} \left( \cdot \right)$ at  $\bm{X}_{e,a^*+1}^d, \bm{B}_{e}$ and obtain the the prediction $\hat{Y}_{e,j,a^*+1}$. In our empirical analysis, $\bm{X}_{e,a^*+1}^d$ contains a one-period lagged value of $Y_{e,j,a^*+1}$. It is possible to construct the prediction at $a^*+1$ because we observe $Y_{e,j,a^*}$.
+\begin{equation}
+\mathbb{E} \left[ \bm{m}_{j,a} \left( \bm{X}_{n,a}^d, \bm{B}_{n}; \bm{\theta}_{j,a} \right) \right] = 0,  \quad k \in \{n,e\}, \quad j \in \mathcal{J}_a \label{eq:moment}
+\end{equation}
 
-\item $\hat{\phi}_{j,a^*+2} \left( \cdot \right)$ at  $\bm{X}_{e,a^*+2}^d, \bm{B}_{e}$ and obtain the the prediction $\hat{Y}_{e,j,a^*+2}$. In our empirical application, $\bm{X}_{e,a^*+2}^d$ contains a one-period lagged value of $Y_{e,j,a^*+2}$. It is possible to construct the prediction at $a^*+2$ because we use $\hat{Y}_{e,j,a^*+1}$ (as an estimate of $Y_{e,j,a^*+1}$) to evaluate $\hat{\phi}_{j,a^*+2}$ at  $\bm{X}_{e,a^*+2}^d, \bm{B}_{e}$.
-\end{enumerate}
-\end{enumerate}
+\noindent where $\bm{m}_{j,a} \left( \bm{X}_{n,a}, \bm{B}_{n} ; \bm{\theta}_{j,a} \right) := {\bm{X_{n,a}}}^{'} \left( Y_{n,j,a}^d -   \phi_{j,a} \left( \bm{X}_{n,a}^d, \bm{B}_{n} \right) \right)$ for $a \in [0, \ldots A]$.\\
 
-\noindent \noindent The estimator discussed so far, however, misses three important aspects: 
+\noindent We use the auxiliary sample ($n$) to estimate the vector of coefficients. Let $\bm{m} \left ( \cdot, \bm{\theta} \right)$, stack the function $\bm{m}_{j,a} \left( \bm{X}_{n,a}, \bm{B}_{n} ; \bm{\theta}_{j,a} \right)$  for all $j \in \mathcal{J}_a$, all $a \in [0, \ldots A]$, and $k = n$.\\
 
-\begin{enumerate}[(i)] 
-\item Note that Assumption~\ref{ass:exog} (Exogeneity) applies both to the auxiliary and to the experimental samples. Together with Assumption~\ref{ass:summary} (Invariance), this implies that the moment condition in \eqref{eq:smoment} is valid in both samples. We can use these additional moment condition in our estimation procedure.
-\item We can set-up an estimator that jointly consider the moments of all outcomes $j \in \mathcal{J}_{a}$ for $a \in [a^*+1, \ldots, A]$.
-\item We can minimize a weighted loss function, that weighs the moment in \eqref{eq:moment} for each outcome and at each age. It is of specific interest for us to weight the variance of the moments in \eqref{eq:moment} because, in order to satisfy Assumption~\ref{ass:contain} (Support Conditions), we pool different auxiliary data sources, as we explain in the main text.
-\end{enumerate}
+\noindent Observing the outcomes at age $a^*$ provides us with additional moment conditions. To see this, note that, in our analysis,  $\bm{X}_{k,a^*+1}$ contains a lagged variable of the outcome to predict and define the moment: $h_{j,a^*+1}  \left( \bm{X}_{e,a^*+1}, \bm{B}_{n} ; \bm{\theta}_{j,a^*+1} \right) =:  {\bm{X}_{e,a^*+1}}^{'} \left( \hat{Y}_{e,j,a^*+1} - \phi_{j,a^*+1} \left ( \bm{X}_{e,a^*+1}, \bm{B}_{e} \right) \right)$, where $\hat{Y}_{e,j,a^*+1}$ is defined as before. Although this moment uses information in the auxilliary sample (through the construction of $\hat{Y}_{e,j,a^*+1}$), it provides additional information (not in \eqref{eq:moment}) through $\bm{X}_{e,a^*+1}$.\\
 
-\noindent Taking these aspects into consideration, the joint moment condition for identifying the parameters associated with all of our outcomes, $\bm{\theta}$ is 
-
-
-
-
-\begin{eqnarray}
-\mathbb{E} \left[ \bm{m} \left( \cdot ; \bm{\theta} \right) \right] &:=&
-\begin{bmatrix}
- \mathbf{h}_{e} \left(  \bm{X}_{e,a^*}^d, \bm{B}_{e}; \bm{\theta}_{h}  \right) \\  \mathbf{h}_{n} \left(  \bm{X}_{n,a^*}^d, \bm{B}_{n}; \bm{\theta}_{h}  \right) \\
-\bm{m}_{e,1,a^*+1} \left( \bm{X}_{e,a^*+1}^d, \bm{B}_{e}; \bm{\theta}_{1,a^*+1} \right) \\ \vdots \\  \bm{m}_{e,1,A} \left( \bm{X}_{e,A}^d, \bm{B}_{e}; \bm{\theta}_{1,A} \right) \\
-\bm{m}_{n,1,a^*+1} \left( \bm{X}_{n,a^*+1}^d, \bm{B}_{n}; \bm{\theta}_{1,a^*+1} \right) \\ \vdots \\  \bm{m}_{n,1,A} \left( \bm{X}_{n,A}^d, \bm{B}_{e}; \bm{\theta}_{1,A} \right) \\
-\bm{m}_{e,J,a^*+1} \left( \bm{X}_{e,a^*+1}^d, \bm{B}_{e}; \bm{\theta}_{J,a^*+1} \right) \\ \vdots \\  \bm{m}_{e,J,A} \left( \bm{X}_{e,A}^d, \bm{B}_{e}; \bm{\theta}_{J,A} \right) \\
-\bm{m}_{n,J,a^*+1} \left( \bm{X}_{n,a^*+1}^d, \bm{B}_{n}; \bm{\theta}_{J,a^*+1} \right) \\ \vdots \\  \bm{m}_{n,J,A} \left( \bm{X}_{n,A}^d, \bm{B}_{e}; \bm{\theta}_{J,A} \right) 
- \label{eq:loss}
-\end{bmatrix}  \\ \nonumber
-&=& \bm{0}, \label{eq:MOMENT}
-\end{eqnarray}
-
-\noindent where we use the subindex used so far to distinguish the moments in the auxiliary sample with the moments in the experimental sample and $J$ is the total number of outcomes that we consider. In our analysis, $\bm{X}_{k,a^*+1}^d$ contains a lagged and possibly unobserved values of $Y_{k,j,a^*+1}$. To compute the empirical counterparts of $\bm{m}_{k,j,a^*+1}$ for $k \in \{e, n\}$, we use the steps listed as 1. and 2. above.\\
+\noindent For some outcomes, we observe intermittent information. For example, we observe labor and transfer income at ages 21 and 30. In this case, we have two additional moments, not only one. Stack these set of additional moments and let  $\bm{h} \left ( \cdot, \bm{\theta} \right)$ denote them. These additional set of moments overidentify the parameter vector of interest, $\bm{\theta}$. Standard procedures allow us to use these set of additional moments to improve efficiency.\\ 
 
 \noindent Let $\bm{W}$ be a positive definite matrix. A consistent estimation approach for $\bm{\theta}$ is to minimize 
 
 \begin{equation}
-Q :=  {\bm{\bar{m}} \left( \cdot ; \bm{\theta} \right) }^{'} \bm{W} ^{-1} {\bm{\bar{m}} \left( \cdot ; \bm{\theta} \right)}. \label{eq:wloss}
-\end{equation}
+Q :=  {\begin{bmatrix} {\bm{\bar{m}} \left( \cdot ; \bm{\theta} \right) }  \\ {\bm{\bar{h}} \left( \cdot ; \bm{\theta} \right) }  \end{bmatrix}}^{'}
+\bm{W} ^{-1}{\begin{bmatrix} {\bm{\bar{m}} \left( \cdot ; \bm{\theta} \right) }  \\ {\bm{\bar{h}} \left( \cdot ; \bm{\theta} \right) }  \end{bmatrix}}, \label{eq:wloss}
+\end{equation}\\
 
-\noindent We use the CNLSY to construct the moments from ages 22 to 29 and then use the PSID and the NLSY79 as a single, joint sample to construct the moments afterwards (except for health, where we use various other datasets, as we explain in Appendix~F).\\
+\noindent where $\bar{u}$ denotes the empirical counterpart of $u$.\\
 
-\noindent The loss function in \eqref{eq:wloss} weighs the moments coming from different datasets. $\bm{W}$ is not restricted to be diagonal so that these moments are allowed to correlate. Iterated, feasible procedures to obtain an estimate of $\bm{W}$ jointly with the parameters of interest guarantee efficiency and are straightforward to implement \citep{Hansen_1982_Econometrica,Amemiya_1985_advanced}.\footnote{\citet{Altonji_Segal_1996_JoBaES} show that GMM presents downwards bias in absolute value in small-sample size setting, which could be a concern in our setting.} 
+\noindent $\bm{W}$ is not restricted to be diagonal so that these moments are allowed to correlate. Iterated, feasible procedures to obtain an estimate of $\bm{W}$ jointly with the parameters of interest guarantee efficiency and are straightforward to implement \citep{Hansen_1982_Econometrica,Amemiya_1985_advanced}.\footnote{\citet{Altonji_Segal_1996_JoBaES} show that GMM presents downwards bias in absolute value in small-sample size setting, which could be a concern in our setting.}\\  
+
+\noindent We explain the samples used to construct each empirical counterpart and the procedure to obtain standard errors on the predictions in Appendix~\ref{app:method_noobs} and Appendix~\ref{appendix:bootstrap}, respectively.
 
 %References
 \singlespace
